--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,21 @@ body {
 	height: 500px;
 	position: relative;
 	z-index: 1;
-
+}
+.text {
+  width: 600px;
+  height: 500px;
+  float: right;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.text h1 {
+font-family: 'Amatic SC', cursive;
+color: black;
 }
 .ryu {
 	foat: left;
