--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,10 @@ body {
 }
 .main {
 	background-color: white;
-	margin-top: 11px;
+	margin-top: 110px;
 	padding-left: 100px;
 	min-width: 1200px;
-	height: 500px;
+	min-height: 500px;
 	position: relative;
 	z-index: 1;
 }
